--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>App</title>
+    <title>CreativePartners</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
